monitor/manifests/01-namespace.yaml
# Autor: Diego Regis M. F. dos Santos | diego-f-santos@openlabs.com.br
# Time: OpenLabs - DevOps | Infra | Versão: 2.2
# Nota: NADs do snmp-monitor usam range 100-200 para não conflitar com snmp-targets (10-90)
apiVersion: v1
kind: Namespace
metadata:
  name: snmp-monitor
  labels:
    app.kubernetes.io/part-of: vivo-snmp-prod
