monitor/manifests/06-noc-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "5"
    field.cattle.io/publicEndpoints: '[{"addresses":["172.16.15.74","172.16.15.75","172.16.15.76","172.16.15.77","172.16.15.78","172.16.15.79"],"port":80,"protocol":"HTTP","serviceName":"snmp-monitor:vivo-noc-frontend","ingressName":"snmp-monitor:vivo-noc","hostname":"vivo-noc.172.16.15.32.nip.io","path":"/","allNodes":false}]'
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"vivo-noc-frontend"},"name":"vivo-noc-frontend","namespace":"snmp-monitor"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"vivo-noc-frontend"}},"template":{"metadata":{"labels":{"app":"vivo-noc-frontend"}},"spec":{"affinity":{"nodeAffinity":{"requiredDuringSchedulingIgnoredDuringExecution":{"nodeSelectorTerms":[{"matchExpressions":[{"key":"node-role.kubernetes.io/control-plane","operator":"Does [...]
  creationTimestamp: "2026-05-02T22:08:07Z"
  generation: 6
  labels:
    app: vivo-noc-frontend
  name: vivo-noc-frontend
  namespace: snmp-monitor
  resourceVersion: "37147393"
  uid: ef4e6e6a-7196-4de0-b431-5e58a9ba6bf5
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: vivo-noc-frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-05-03T16:08:37-03:00"
      labels:
        app: vivo-noc-frontend
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: DoesNotExist
      containers:
      - image: ghcr.io/drmsantos/vivo-noc-frontend:latest
        imagePullPolicy: Always
        name: frontend
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 64Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-05-02T22:08:12Z"
    lastUpdateTime: "2026-05-02T22:08:12Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-05-03T19:08:14Z"
    lastUpdateTime: "2026-05-03T19:08:18Z"
    message: ReplicaSet "vivo-noc-frontend-5b4dccc5fb" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 6
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
